# lite-cli

./: AGENTS.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: autorouter_cmd.rs  classifier.rs  dashboard.html  dashboard.rs  log.rs  login_cmd.rs  logs_cmd.rs  main.rs  pricing.rs  proxy.rs  settings.rs  statusline_cmd.rs  transcripts.rs  usage.rs
